# demo-predict

./: .dockerignore  .env.example  .gitignore  1Moby_Project_Implementation_Guide.md  AI-CHAT.md  AI_CHAT_DESIGN.md  DATA_STRUCTURE.md  DESIGN.md  DIAGRAMS.docx  DIAGRAMS.md  MIGRATION-INVENTORY.md  PROJECT.md  README.md  audit.md  churn_model.py  claude.md  docker-compose.yml  package.json  refactor.md  sample_users.csv  turbo.json
apps/ml/: Dockerfile  entrypoint.sh  predict_v2.py  pyproject.toml  requirements.txt  train.py  train_v2.py
apps/ml/alembic/: env.py
apps/ml/alembic/versions/: 2026_05_18_0001_baseline.py  2026_05_21_0003_add_explanations.py  2026_05_21_0004_schema_improvements.py  2026_06_05_0005_ml_rebuild_tables.py  2026_06_05_0006_drop_legacy_ml_tables.py  2026_06_10_0007_ml_v2_output_columns.py
apps/ml/api/: database.py  main.py  models.py
apps/ml/scripts/: migrate_or_repair.py  profile_training_dataset.py  verify_clean_data_access.py  verify_constants_sync.py  verify_feature_builder.py  verify_preprocessing.py  verify_promotion_policy.py  verify_realized_outcomes.py
apps/ml/src/: config.py  constants.py  data_loader.py  lifecycle.py  predictor.py  storage.py
apps/ml/src/cli/: backfill_outcomes.py  predict.py  train.py
apps/ml/src/models/: clv_model.py  conversion_model.py
apps/ml/src/outcomes/: __init__.py  metrics.py  runner.py
apps/ml/src/prediction/: __init__.py  runner.py
apps/ml/src/training/: artifacts.py  baselines.py  churn_trainer.py  clv_trainer.py  credit_trainer.py  data.py  datasets.py  (+11 more)
apps/ml/worker/: predict_worker.py
(+459 files in other folders)
